--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
+
     <title>React App</title>
   </head>
   <body>
